--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,17 +1,17 @@
 button {
-    margin: 0 40px;
-    padding: 10px;
-    border: 3px solid #4d06f3;
-    border-radius: 20px;
-    background-color: #5321b1;
-    color: #fff;
+  border-radius: 20px;
+  border: none;
+  background-color: rgba(117,180,255,0.9);
+  color: #fff;
+  margin: 40px;
+  padding: 10px;
 }
 
 button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 button:disabled {
-    opacity: 0.5;
-    cursor: default;
+  opacity: 0.5;
+  cursor: default;
 }
