--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 * {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  text-decoration: none;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 62.5%;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
 }
