--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 62.5%;
   list-style: none;
   margin: 0;
